syntax = "proto3";

package com.fanaujie.ripple.protobuf;

option java_multiple_files = true;
option java_package = "com.fanaujie.ripple.protobuf.msggateway";
import "ChatMessage.proto";


message OnlineBatchPushChatMessageReq {
  ChatMessage chat_message = 1;
  repeated int64 push_to_user_ids = 2;
}

message PushChatDeviceResult {
  string device_id = 1;
  int64  result_code = 2;
}

message SinglePushChatMessageResp {
  int64  push_to_user_id = 1;
  repeated PushChatDeviceResult device_results = 2;
}


message OnlineBatchPushChatMessageRsp {
  repeated SinglePushChatMessageResp results = 1;
}


service MessageGateway {
  rpc OnlineBatchPushChatMsg(OnlineBatchPushChatMessageReq) returns (OnlineBatchPushChatMessageRsp);
}